2007-08-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclProc.c (TclCreateProc): better comments on the
	required varflag values when loading precompiled procs.
	
	* generic/tclExecute.c (INST_STORE_ARRAY):
	* tests/trace.test (trace-2.6): whole array write traces on
	compiled local variables were not firing [Bug 1770591]
	
2007-08-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclProc.c (InitLocalCache): reference firstLocalPtr via
	procPtr.  codePtr->procPtr == NULL exposed by tbcload.

2007-08-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Corrected failure to compile/link 
	in the -DNO_WIDE_TYPE configuration.

	* generic/tclExecute.c:	Corrected improper use of bignum arguments
	* tests/expr.test:	to *SHIFT operations.  [Bug 1770224].

2007-08-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.h: remove comments refering to VAR_SCALAR, as
	that flag bit does not exist any longer.
	* generic/tclProc.c (InitCompiledLocals): removed optimisation for
	non-resolved case, as the function is never called in that
	case. Renamed the function to InitResolvedLocals to calrify the
	point. 

2007-08-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.decls:   Exporting via stubs to help
	* generic/tclInt.h:       xotcl adapt to VarReform.
	* generic/tclIntDecls.h:  
	* generic/tclStubInit.c:  

2007-08-07  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclEnv.c:	improve environ handling on Mac OS X (adapted
	* unix/tclUnixPort.h:	from Apple changes in Darwin tcl-64).

	* unix/Makefile.in:	add support for compile flags specific to
				object files linked directly into executables.

	* unix/configure.in (Darwin): only use -seg1addr flag when prebinding;
	use -mdynamic-no-pic flag for object files linked directly into exes;
	support overriding TCL_PACKAGE_PATH/TCL_MODULE_PATH in environment.

	* unix/configure: autoconf-2.59

2007-08-06  Don Porter  <dgp@users.sourceforge.net>
